--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@adiwajshing/keyed-db",
+  "name": "@diegofreitas/keyed-db",
   "version": "0.2.4",
   "description": "Lightweight library to store an in-memory DB",
-  "homepage": "https://github.com/adiwajshing/keyed-db",
+  "homepage": "https://github.com/diegofreitas/keyed-db",
   "main": "lib/KeyedDB.js",
   "types": "lib/KeyedDB.d.ts",
   "keywords": [
@@ -17,7 +17,7 @@
   "author": "Adhiraj Singh",
   "license": "MIT",
   "repository": {
-    "url": "git@github.com:adiwajshing/keyed-db.git"
+    "url": "git@github.com:diegofreitas/keyed-db.git"
   },
   "files": [
     "lib/*"
